@@ -1,3 +1,6 @@
+2007-12-16 rec2csv saves doubles without losing precision. Also, it
+           does not close filehandles passed in open. - JDH,ADS
+
 2007-12-13 Moved rec2gtk to matplotlib.toolkits.gtktools and rec2excel
            to matplotlib.toolkits.exceltools - JDH
 
